--- a/src/sass/components/_blocks.scss
+++ b/src/sass/components/_blocks.scss
@@ -3,7 +3,7 @@
   border-radius: 5px;
 
   .box-size__border__name {
-    font-size: 22px;
+    font-size: 25px;
     font-weight: 500;
     color: $darkgrey-papa;
     font-family: "papafont";
@@ -11,15 +11,20 @@
   }
 }
 
+.prueba{
+  width: 50%;
+}
 .adicional {
   color: #898988;
 
   .adicional__name {
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 500;
     color: $darkgrey-papa;
     font-family: "papafont";
     text-transform: uppercase;
+    letter-spacing: 0.3px;
+
   }
 
   .adicional__number-span {
@@ -34,6 +39,8 @@
     }
   }
 
+
+
   .adicional--height-detail2 {
     height: 125px;
     @media (max-width: 340px) {
@@ -46,6 +53,10 @@
       height: 175px;
     }
   }
+}
+
+.adicional__heigth{
+  height: 225px;
 }
 
 .detail{
@@ -64,5 +75,29 @@
     border-radius: 5px;
     border: 2px solid $green-papa;
     width: 100%;
+  }
+}
+
+
+.heightDescription--1{
+  height: 70px;
+}
+.heightDescription--2{
+  height: 130px;
+  @media (min-width: 341px) {
+    height: 125px;
+  }
+ 
+}
+.heightDescription--3{
+  height: 175px;
+  @media (min-width: 341px) {
+    height: 150px;
+  }
+}
+.heightDescription--4{
+  height: 230px;
+  @media (min-width: 341px) {
+    height: 180px;
   }
 }
