cambio checkbox de temperatura de bebidas

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -153,6 +153,77 @@
   }
 }
 
+/* The container */
+.temperature__container {
+  font-size: 18px;
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.temperature__container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #ffffff;
+  border: 2px solid #009774;
+  border-radius: 5px;
+}
+
+.temperature__container:hover input ~ .checkmark {
+  background-color: #ffffff;
+  border: 2px solid #009774;
+}
+
+.temperature__container input:checked ~ .checkmark {
+  background-color: #009774;
+}
+
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.temperature__container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+.temperature__container .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.form-control {
+  border: 2px solid #009774;
+}
+.form-control:focus {
+  outline: none;
+}
+
 .headerbox {
   text-align: center;
 }
